--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,42 @@
-/* add your CSS here */
+h3{
+ font-weight: bolder;
+}
+
+.card {
+ width: 419px;
+ /*height: 641px;*/
+ font-style: normal;
+}
+
+.cardimage {
+	max-width: 100%;
+	padding-bottom: 10px;
+}
+
+.liststyle{
+	list-style-type: none;
+	padding-left: 0;
+}
+
+span{
+	font-weight: bold;
+}
+
+.borderwithshadow {
+	border-color: silver;
+	border-width: 1px;
+	border-style: solid;
+	padding: 12px;
+	box-shadow: 10px 10px 2px 0px lightgray;
+}
+
+.borderwithoutshadow {
+	border-color: silver;
+	border-width: 1px;
+	border-style: solid;
+	padding:10px;
+}
+
+.italictext {
+	font-style: oblique;
+}
